--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
 .App {
-  text-align: center;
+  max-width: 600px;
+  margin: 30px auto;
+}
+
+.App footer {
+  font-size: 10px;
+  max-width: 10px 0;
 }
